<resources>
    <string name="app_name">DataOfThronesAPI</string>
    <string name="greetings">Data Of Thrones</string>
    <string name="login">Login</string>
    <string name="user">User</string>
    <string name="word_is_empty">No user entered</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="confirm_delete_message">Are you sure you want to delete %s?</string>
    <string name="title">Title:</string>
    <string name="house">House:</string>
    <string name="version">api version 1.0</string>
    <string name="configuration">Configuration</string>
    <string name="welcome">Welcome!</string>
    <string name="description">DataOfThrones is an application in its 3rd phase of development. Now, it accesses an online API to be able to display data of Game of Thrones characters and many more functionalities!</string>
    <string name="welcome2">Welcome</string>
    <string name="start">Start</string>
    <string name="developer">Developed by Miguel Moreno Columé</string>
    <string name="characters">Characters</string>
    <string name="loading">Loading Characters</string>
    <string name="back">Back</string>
    <string name="loading_character">Loading Character</string>
    <string name="name">Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="user_info">User Info</string>
    <string name="account">Account</string>
    <string name="your_account">Your account</string>
    <string name="user1">User:</string>
    <string name="information">You can change your user settings by clicking on the button at the top right</string>
    <string name="change_username">Change Username</string>
    <string name="save">Save</string>
    <string name="user_changed">The user has been successfully changed</string>
    <string name="enable_intro">Skip Intro</string>
    <string name="fav_character">Favorites Characters</string>
    <string name="comment">Comment Comment Comment Comment Comment Comment Comment Comment Comment Comment Comment Comment Comment Comment Comment Comment</string>
    <string name="add_comment">Add comment</string>
    <string name="write_comment">Write comment</string>
    <string name="add">Add</string>
    <string name="comment_is_empty">No comment entered</string>
    <string name="comments">Comments</string>

</resources>