<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvVersion"
        style="@style/normal_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ironthrone"
        android:layout_width="383dp"
        android:layout_height="343dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="248dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenida"
        app:srcCompat="@drawable/dragonmiguel" />

    <CheckBox
        android:id="@+id/checkBoxIntro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/enable_intro"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ironthrone"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvComenzar"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/start"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMenu"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/start"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxIntro2"
        app:layout_constraintStart_toStartOf="@+id/checkBoxIntro2"
        app:layout_constraintTop_toBottomOf="@+id/ironthrone" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/developer"
        app:layout_constraintBottom_toTopOf="@+id/ironthrone"
        app:layout_constraintEnd_toEndOf="@+id/tvComenzar"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/tvComenzar"
        app:layout_constraintTop_toBottomOf="@+id/tvComenzar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>